--- a/frontend/style.css
+++ b/frontend/style.css
@@ -44,6 +44,13 @@ html {
     font-size: 16px;
   }
 
+  .activated {
+    background-color:rgb(40, 160, 230);
+    border-radius: 0px 5px 5px 0px;
+    border: 1px solid;
+    color: white;
+  }
+
   .btn:hover {
     background-color: rgb(230, 240, 250);
   }
